2005-11-27  Sven Panne  <sven.panne@aedion.de>

	* admin/VisualStudioDotNET/.cvsignore,
	admin/VisualStudioDotNET/alut.sln,
	admin/VisualStudioDotNET/alut/.cvsignore,
	admin/VisualStudioDotNET/alut/alut.vcproj,
	admin/VisualStudioDotNET/hello_world/.cvsignore,
	admin/VisualStudioDotNET/hello_world/hello_world.vcproj,
	admin/VisualStudioDotNET/playfile/.cvsignore,
	admin/VisualStudioDotNET/playfile/playfile.vcproj: Added. The structure
	is now similar to the Visual Studio 6 directory and the
	solution/projects are now usable with older versions of Visual Studio
	.NET.

	* admin/alut.sln, admin/alut.vcproj, admin/hello_world.vcproj,
	admin/playfile.vcproj: Removed.

	* admin/VisualStudio6/.cvsignore, admin/VisualStudio6/alut.dsw,
	admin/VisualStudio6/alut/.cvsignore, admin/VisualStudio6/alut/alut.dsp,
	admin/VisualStudio6/hello_world/.cvsignore,
	admin/VisualStudio6/hello_world/hello_world.dsp,
	admin/VisualStudio6/playfile/.cvsignore,
	admin/VisualStudio6/playfile/playfile.dsp: Added Visual Studio 6
	workspace and projects.

	* src/alutCodec.c: Silence a useless Visual C 6 warning.

	* src/alutInternal.h: Visual C 6's basetsd.h has no definitions for
	sized integral types, so let's define them by hand.

2005-11-25  Sven Panne  <sven.panne@aedion.de>

	* admin/alut.vcproj: Use "Multi-threaded DLL (/MD)" and "Multi-threaded
	Debug DLL (/MDd)" as the runtime library, bringing down the size of
	alut.dll to something sensible.

	* examples/playfile.c, test_suite/test_fileloader.c,
	test_suite/test_memoryloader.c, test_suite/test_retrostuff.c: Changed
	literal ALfloat constants from 0.1 to 0.1f, silencing Visual C.

	* configure.ac: Tell the system headers that we might use POSIX/XPG
	entitites like struct timespec or random(), which are not in the ANSI
	standard. Do not define any user variables like CFLAGS. Split the old
	configure flag --enable-warnings into a pair --enable-warnings and
	--enable-werror. Use a (modified) macro from the autoconf archive to